src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Owner_Sub_Division__c</fullName>
        <description>This fields describes which sub-division or Practice is driving the BD efforts related to this opportunity.</description>
        <inlineHelpText>This fields describes which sub-division or Practice is driving the BD efforts related to this opportunity.</inlineHelpText>
        <label>Opportunity Owner (Sub-Division)</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GSO - BizOps</fullName>
                </value>
                <value>
                    <fullName>GSO - BizStrat</fullName>
                </value>
                <value>
                    <fullName>GSO - CC Connect</fullName>
                </value>
                <value>
                    <fullName>GSO - Dgtl Adherence</fullName>
                </value>
                <value>
                    <fullName>GSO - Leadership</fullName>
                </value>
                <value>
                    <fullName>GSO - Marketing</fullName>
                </value>
                <value>
                    <fullName>GSO - OoCEO</fullName>
                </value>
                <value>
                    <fullName>GSO - POps</fullName>
                </value>
                <value>
                    <fullName>GSO - RAD</fullName>
                </value>
                <value>
                    <fullName>GTD - Eng Management</fullName>
                </value>
                <value>
                    <fullName>GTD - Leadership</fullName>
                </value>
                <value>
                    <fullName>GTD - QA</fullName>
                </value>
                <value>
                    <fullName>GTD - Team</fullName>
                </value>
                <value>
                    <fullName>Inbound Sales</fullName>
                </value>
                <value>
                    <fullName>India - Delivery</fullName>
                </value>
                <value>
                    <fullName>India - Leadership</fullName>
                </value>
                <value>
                    <fullName>India - Partnerships</fullName>
                </value>
                <value>
                    <fullName>India - Tech</fullName>
                </value>
                <value>
                    <fullName>SaaS - CS</fullName>
                </value>
                <value>
                    <fullName>SaaS - Management</fullName>
                </value>
                <value>
                    <fullName>SaaS - Marketing</fullName>
                </value>
                <value>
                    <fullName>SaaS - Operations</fullName>
                </value>
                <value>
                    <fullName>SaaS - Platform</fullName>
                </value>
                <value>
                    <fullName>SaaS - Product</fullName>
                </value>
                <value>
                    <fullName>SaaS - Sales</fullName>
                </value>
                <value>
                    <fullName>SaaS - Support</fullName>
                </value>
                <value>
                    <fullName>Sol - Delivery</fullName>
                </value>
                <value>
                    <fullName>Sol - Leadership</fullName>
                </value>
                <value>
                    <fullName>Sol - Partnerships</fullName>
                </value>
                <value>
                    <fullName>Sol - Tech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Owning_Entity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Which busniness unit owns this opportunity.</inlineHelpText>
        <label>Opportunity Owner (BU)</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Opportunities (Owning)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Power_of_One__c</fullName>
        <description>Power of one formula</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity - Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <description>Describes the source of the actual opportunity (not the lead).</description>
        <inlineHelpText>Choose a source of the opportunity.  Answers the question &quot;Where did we first hear about this opportunity?&quot;</inlineHelpText>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applied to RFP</fullName>
                </value>
                <value>
                    <fullName>Existing Project - New Deliverables/Scale Up</fullName>
                    <label>Existing Project - New Deliverables/Scale Up (reactive)</label>
                </value>
                <value>
                    <fullName>Existing Project - Contract Amendment</fullName>
                </value>
                <value>
                    <fullName>Existing Client - New Project</fullName>
                    <label>Existing Client - New Project (reactive)</label>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Inbound - Referred within same Org</fullName>
                </value>
                <value>
                    <fullName>Inbound - Referred by Another Org</fullName>
                </value>
                <value>
                    <fullName>Inbound - KAM</fullName>
                </value>
                <value>
                    <fullName>Outbound - Contacted Directly</fullName>
                </value>
                <value>
                    <fullName>Outbound-KAM (Key Account Management)</fullName>
                    <label>Outbound - KAM (Key Account Management)</label>
                </value>
                <value>
                    <fullName>Onboarding Package</fullName>
                </value>
                <value>
                    <fullName>Referred by Dimagi staff</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Implementation Renewal</fullName>
                </value>
                <value>
                    <fullName>Implementation renewal - KAM</fullName>
                </value>
                <value>
                    <fullName>Product Renewal</fullName>
                </value>
                <value>
                    <fullName>Product renewal- KAM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pro-bono Renewal</fullName>
                </value>
                <value>
                    <fullName>Existing client - Upsell_reactive</fullName>
                    <label>Existing client - Upsell (reactive)</label>
                </value>
                <value>
                    <fullName>ABS (Proactive Account expansion)</fullName>
                </value>
                <value>
                    <fullName>Pre-bid (Crowd In)</fullName>
                </value>
                <value>
                    <fullName>Strategic Fundraising</fullName>
                </value>
                <value>
                    <fullName>Crisis Response Corps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Validation__c</fullName>
        <formula>IF(
OR(ISBLANK( Product_Text__c ),Product_Text__c = &apos;TBD&apos;),
&apos;Missing products&apos;,

IF(
ISBLANK( Amount ),
&apos;Missing amount&apos;,

IF(ISBLANK( Duration_months__c ),
&apos;Missing duration&apos;,

IF(ISBLANK( Probability ),
&apos;Missing probability&apos;,

IF(
AND(
Amount = 0,
Probability = 0
),
&apos;Amount and Probability cannot be zero&apos;,

IF(
ISBLANK( Expected_Buffer__c),
&apos;Expected Buffer % cannot be blank&apos;,

IF(
AND(
OR(ISPICKVAL(StageName, &quot;Stage 4 - Proposal Development&quot;),
ISPICKVAL(StageName, &quot;Stage 5 - Submitted&quot;),
ISPICKVAL(StageName, &quot;Stage 6 - In Negotiations&quot;)),
ISPICKVAL( Opportunity_Owner_Division__c , &quot;&quot;)),
&apos;Division Opportunity Owner cannot be blank&apos;,

IF(
AND(
OR(ISPICKVAL(StageName, &quot;Stage 4 - Proposal Development&quot;),
ISPICKVAL(StageName, &quot;Stage 5 - Submitted&quot;),
ISPICKVAL(StageName, &quot;Stage 6 - In Negotiations&quot;)),
ISPICKVAL( Opportunity_Owner_Division__c , &quot;Solutions&quot;),
ISPICKVAL( Opportunity_Owner_Sub_Division__c , &quot;&quot;)),
&apos;Subdivision Opportunity Owner cannot be blank&apos;,

IF(
AND(
OR(ISPICKVAL(StageName, &quot;Stage 4 - Proposal Development&quot;),
ISPICKVAL(StageName, &quot;Stage 5 - Submitted&quot;),
ISPICKVAL(StageName, &quot;Stage 6 - In Negotiations&quot;)),
ISPICKVAL( Execution_Owner_Division__c , &quot;&quot;)),
&apos;Division Execution Owner cannot be blank&apos;,

IF(
AND(
OR(ISPICKVAL(StageName, &quot;Stage 4 - Proposal Development&quot;),
ISPICKVAL(StageName, &quot;Stage 5 - Submitted&quot;),
ISPICKVAL(StageName, &quot;Stage 6 - In Negotiations&quot;)),
ISPICKVAL( Execution_Owner_Practice__c , &quot;&quot;)),
&apos;Subdivision Execution Owner cannot be blank&apos;,

IF( ISBLANK(Expense_Income__c),
&apos;Expense Income cannot be blank&apos;,

&apos;Check date - everything else is valid.&apos;)
)
)
)
)
)
)
)
)
)
)</formula>
        <label>Opportunity Validation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Used by snapshots to prepopulate fields.</description>
        <inlineHelpText>Used by snapshots to prepopulate fields.</inlineHelpText>
        <label>Snapshot Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                    <default>true</default>
                    <label>Opportunity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opps_Age__c</fullName>
        <formula>IF(IsClosed, CloseDate, TODAY()) - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opps Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Stage__c</fullName>
        <formula>CASE( StageName , 
&apos;Stage 1 - Connect&apos;, &apos;Stage 1 - Connect&apos;, 
&apos;Stage 2 - Talking&apos;, &apos;Stage 2 - Talking&apos;,
&apos;Stage 3 - Prospect&apos;, &apos;Stage 3 - Prospect&apos;, 
&apos;Stage 4 - Proposal Development&apos;, &apos;Stage 4 - Proposal Development&apos;,
&apos;Stage 5 - Submitted&apos;, &apos;Stage 5 - Submitted&apos;,
&apos;Stage 6 - In Negotiations&apos;, &apos;Stage 6 - In Negotiations&apos;,
&apos;Closed - Lost&apos;,&apos;Closed - Lost&apos;,
&apos;Closed - Won&apos;, &apos;Closed - Won&apos;,
&apos;Pending other action&apos;, &apos;Pending other action&apos;,
&apos;Closed&apos;,&apos;Closed&apos;,
&apos;Stage 1 - Connect&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp. Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_to_Close_Time__c</fullName>
        <description>Opportunity --&gt; Closed Time</description>
        <formula>CloseDate - DATEVALUE(CreatedDate)</formula>
        <label>Opp to Close Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ops_to_customer_lead_time__c</fullName>
        <formula>IF(
NOT(ISBLANK( CloseDate  )) &amp;&amp; NOT(ISBLANK(Datevalue( CreatedDate ) )),
IF(YEAR(CloseDate)=Year(Datevalue(CreatedDate)), 
(
(
(Month(CloseDate)-Month(Datevalue(CreatedDate)))*30.4+ Day(CloseDate)-Day(Datevalue(CreatedDate))
)/30.4
),
(
(YEAR(  CloseDate  ) -YEAR(DATEVALUE(CreatedDate )) - 1) *12*30.4 
+ (12 - MONTH(DATEVALUE( CreatedDate )))*30.4 
+ MONTH( CloseDate  )*30.4
-(30.4-Day(CloseDate))
+(30.4-Day(Datevalue(CreatedDate)))
)/30.4
),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ops to customer lead time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the contract includes an optional additional year(s).</description>
        <inlineHelpText>Select if the contract includes an optional additional year(s) to be executed later.</inlineHelpText>
        <label>Option Year or Contract Extension?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <description>Best Guess at Software Plan</description>
        <inlineHelpText>Best Guess at Software Plan</inlineHelpText>
        <label>Plan Budget</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Pro</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Prime_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Potential Prime #1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Potential Prime #1)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potential_Prime_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Potential Prime #2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Potential Prime #2)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prime_Received_Award_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if our consortium and/or prime partner received award notice. This box is used by Pre-bid team to track when the prime wins and deliniate from when Dimagi also is awarded as a sub.</description>
        <inlineHelpText>Check this box if our consortium and/or prime partner received award notice. This box is used by Pre-bid team to track when the prime wins and deliniate from when Dimagi also is awarded as a sub.</inlineHelpText>
        <label>Prime Received Award Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_Dimagi_contact__c</fullName>
        <label>Prior Dimagi contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Text__c</fullName>
        <description>Populated by a trigger.</description>
        <inlineHelpText>Read only field for reporting on products. Add products at bottom of page.</inlineHelpText>
        <label>Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Projected_Project_End_Date__c</fullName>
        <description>The difference between the current month and the month of the projected end date, plus the duration of an opportunity</description>
        <formula>((YEAR(CloseDate) * 12 + MONTH(CloseDate)) - (YEAR(TODAY()) * 12 + MONTH(TODAY()))) + Duration_months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Project End Date (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Dates__c</fullName>
        <inlineHelpText>Start Date, when features need to be ready, potential for dates to change</inlineHelpText>
        <label>Timeline, Dates, and Modifications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposal_Checklist__c</fullName>
        <label>RFP Dashboard Tracker</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Proposal_Dropbox_Location__c</fullName>
        <inlineHelpText>This should be in Dimagi - Proposals</inlineHelpText>
        <label>Proposal Dropbox Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proposal_Questions_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Internal use.  Tracks if Salesforce has already sent the email to the opp owner to answer the proposal development questions.</inlineHelpText>
        <label>Proposal Questions Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualification_Priority__c</fullName>
        <description>This property is the total number of BANT components that were met.</description>
        <formula>IF( Qualiftying_Authority__c , 1, 0) + IF( Qualifying_Budget__c ,1,0)+ IF( Qualifying_Need__c ,1,0)+IF( Qualifying_Timeline__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualiftying_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the lead has clear authority for a sale.</description>
        <inlineHelpText>Check this box if the lead has clear authority for a sale.</inlineHelpText>
        <label>Qualiftying - Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifying_Authority_notes__c</fullName>
        <description>Questions to ask - &quot;In addition to yourself, who else at your company is facing these problems? Are there any issues that they might be concerned with? What is your purchasing process?&quot;</description>
        <inlineHelpText>Questions to ask - &quot;In addition to yourself, who else at your company is facing these problems? Are there any issues that they might be concerned with? What is your purchasing process?&quot;</inlineHelpText>
        <label>Qualifying - Authority notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualifying_Budget_notes__c</fullName>
        <description>Describe any notes about budget, and any open questions to be answered. E.g. &quot;Are you responsible for establishing budget? Do you have budget allocated? Ideally, what are you looking to invest?&quot;</description>
        <inlineHelpText>Describe any notes about budget, and any open questions to be answered. E.g. &quot;Are you responsible for establishing budget? Do you have budget allocated? Ideally, what are you looking to invest?&quot;</inlineHelpText>
        <label>Qualifying - Budget notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualifying_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the lead has clear budget available for a service or product. If they don&apos;t have budget or it is unclear, leave unchecked and put notes in the text field.</description>
        <inlineHelpText>Check this box if the lead has clear budget available for a service or product. If they don&apos;t have budget or it is unclear, leave unchecked and put notes in the text field.</inlineHelpText>
        <label>Qualifying - Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifying_Need_notes__c</fullName>
        <description>Notes / open questions about the challenge the lead sees and fit with CommCare.</description>
        <inlineHelpText>Notes / open questions about the challenge the lead sees and fit with CommCare.</inlineHelpText>
        <label>Qualifying - Need notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualifying_Need__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the lead has clear need (business pain or challenges that CommCare solves).</description>
        <inlineHelpText>Check this box if the lead has clear need (business pain or challenges that CommCare solves).</inlineHelpText>
        <label>Qualifying - Need</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifying_Timeline_notes__c</fullName>
        <description>Use this field to track notes / open questions about timeline.</description>
        <inlineHelpText>Use this field to track notes / open questions about timeline.</inlineHelpText>
        <label>Qualifying - Timeline notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualifying_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the timeline is clear and less than 6 months away.</description>
        <inlineHelpText>Check this box if the timeline is clear and less than 6 months away.</inlineHelpText>
        <label>Qualifying - Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommended_Proposal_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This proposal has good text and is recommended by the author as a starting point</description>
        <inlineHelpText>This proposal has good text and is recommended by the author as a starting point</inlineHelpText>
        <label>Recommended Proposal Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Support_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Potentially interested in Remote Support Services</description>
        <inlineHelpText>Potentially interested in Remote Support Services</inlineHelpText>
        <label>Remote Support Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_expected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox if you expect the customer to default to renew their subscriptions.</description>
        <inlineHelpText>Select this checkbox if you expect the customer to default to renew their subscriptions.</inlineHelpText>
        <label>SaaS product renewal expected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Potentially interested in Report Builder</description>
        <inlineHelpText>Potentially interested in Report Builder</inlineHelpText>
        <label>Report Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Out_Summary__c</fullName>
        <inlineHelpText>Used in the Biz Dev Report Outs to add comments.</inlineHelpText>
        <label>Report Out Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requires_Developer_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The most recent update to Fogbugz ticket.</description>
        <inlineHelpText>The most recent update to Fogbugz ticket.</inlineHelpText>
        <label>Requires Dev Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_to_Longer_Term_Product_Offering__c</fullName>
        <description>Notes from BD team on clients&apos; response to presenting &gt;24 months product subscription.</description>
        <inlineHelpText>Notes from BD team on clients&apos; response to presenting &gt;24 months product subscription.</inlineHelpText>
        <label>Response to Longer Term Product Offering</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resubmission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this proposal a resubmission?</description>
        <label>Resubmission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFP_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFP Coordinator</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Opportunities (RFP Coordinator)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Cycle__c</fullName>
        <description>Used for RFP outreach initiatives</description>
        <inlineHelpText>Used for RFP outreach initiatives</inlineHelpText>
        <label>RFP Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cycle 1</fullName>
                </value>
                <value>
                    <fullName>Cycle 2</fullName>
                </value>
                <value>
                    <fullName>Cycle 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Outreach_Effort__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this is an RFP Outreach Effort, only check if part of an outreach effort from the RFP channel</description>
        <inlineHelpText>Whether this is an RFP Outreach Effort, only check if part of an outreach effort from the RFP channel</inlineHelpText>
        <label>RFP Outreach Effort</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SaaS_CommCare_use_case__c</fullName>
        <description>SaaS team: Please add a brief description for how this client is planning on using CommCare</description>
        <inlineHelpText>SaaS team: Please add a brief description for how this client is planning on using CommCare</inlineHelpText>
        <label>SaaS - CommCare use case</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SaaS_Lessons_learnt_from_win_or_loss__c</fullName>
        <description>Please add comments on a Key Success factor that made you win this opp or something you wish you had done differently (will be used in the Win/loss retro)</description>
        <inlineHelpText>SaaS team, please add comments on Key Success factors that made you win this opp OR something you wish you had done differently (applicable for both a win or a loss) (We will use those comments in the SaaS Win/loss retro)</inlineHelpText>
        <label>SaaS -Lessons learnt from win or loss</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Opportunity_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Salesforce&apos;s internal reference ID. Put this in the Fogbugz External ID field.</inlineHelpText>
        <label>Salesforce Opportunity ID:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Steps_Notes__c</fullName>
        <description>Notes on current and future next steps on the opportunity.</description>
        <inlineHelpText>Notes on current and future next steps on the opportunity.</inlineHelpText>
        <label>Sales Steps Notes</label>
        <length>15000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sales_Steps__c</fullName>
        <description>These are sales step checkboxes</description>
        <inlineHelpText>These are sales step checkboxes</inlineHelpText>
        <label>Sales Steps</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decision maker identified and included in conversation</fullName>
                </value>
                <value>
                    <fullName>CommCare Demo Given to Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Initial demo (not necessarily decision maker)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDR_who_generated_opp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Leave blank if Closer created</inlineHelpText>
        <label>SDR who generated opp</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>SFDC_Employee__c.Name</field>
                <operation>equals</operation>
                <value>Oumaima Saikouk</value>
            </filterItems>
            <filterItems>
                <field>SFDC_Employee__c.Name</field>
                <operation>equals</operation>
                <value>Arti Sahu</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Opportunities (SDR who generated opp)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_EV__c</fullName>
        <description>(1- Expected Buffer %) * EV of Non-Expense Budget * % of Services budget for GS</description>
        <formula>(1-Expected_Buffer__c ) * Expected_Value_Minus_Income__c *  of_Execution_budget_for_GS__c</formula>
        <inlineHelpText>(1- Expected Buffer %) * EV of Non-Expense Budget * % of Services budget for GS</inlineHelpText>
        <label>GS Services Budget (EV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Skill_Language_and_Interest_Required__c</fullName>
        <label>Skill, Language, and Interest Required</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <formula>$Setup.Snapshot_Settings__c.Snapshot_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Snapshot_Name_Total__c</fullName>
        <formula>Name &amp; &apos; - &apos; &amp; TEXT(MONTH( $Setup.Snapshot_Settings__c.Snapshot_Date__c )) &amp; &apos;/&apos; &amp; TEXT(YEAR( $Setup.Snapshot_Settings__c.Snapshot_Date__c )) &amp; &apos; - Total&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Name (Total)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Name__c</fullName>
        <formula>Name &amp; &quot; - &quot; &amp; TEXT(MONTH( $Setup.Snapshot_Settings__c.Snapshot_Date__c )) &amp; &quot;/&quot; &amp; TEXT(YEAR( $Setup.Snapshot_Settings__c.Snapshot_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Stage_Total__c</fullName>
        <inlineHelpText>Used for Pipeline reporting. Ignore.</inlineHelpText>
        <label>Snapshot Stage Total</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Total</fullName>
                    <default>true</default>
                    <label>Total</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solicitation_Number__c</fullName>
        <description>Solicitation number of the overall RFP/RFA the prime is applying to (e.g. RFA-663- 17-000002)</description>
        <inlineHelpText>Solicitation number of the overall RFP/RFA the prime is applying to (e.g. RFA-663- 17-000002)</inlineHelpText>
        <label>Solicitation #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Required__c</fullName>
        <label>Staff LOE Required</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage_Duration__c</fullName>
        <formula>TODAY() -  Stage_Name_Updated_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Name_Updated_Date__c</fullName>
        <label>Stage Name Updated Date</label>
        <type>Date</type>
    </fields>
</CustomObject>